Bug 112270 - [CI][BAT]igt@gem_busy@busy-all - fail - Failed assertion: gem_bo_busy(fd, spin->handle)
Summary: [CI][BAT]igt@gem_busy@busy-all - fail - Failed assertion: gem_bo_busy(fd, spi...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: not set not set
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-14 07:17 UTC by Lakshmi
Modified: 2019-11-19 15:21 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, BSW/CHT
i915 features: GEM/Other


Attachments

Description Lakshmi 2019-11-14 07:17:15 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5279/fi-bdw-5557u/igt@gem_busy@busy-all.html
Starting subtest: busy-all
(gem_busy:1099) igt_dummyload-CRITICAL: Test assertion failure function igt_spin_factory, file ../lib/igt_dummyload.c:376:
(gem_busy:1099) igt_dummyload-CRITICAL: Failed assertion: gem_bo_busy(fd, spin->handle)
Subtest busy-all failed.
Comment 1 CI Bug Log 2019-11-14 07:18:11 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* BSW BDW: igt@gem_busy@busy-all - fail - Failed assertion: gem_bo_busy(fd, spin->handle)
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3695/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5279/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5279/fi-bdw-samus/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7339/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7339/fi-bsw-nick/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3699/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3700/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3700/fi-bsw-n3050/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3700/fi-bsw-nick/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7340/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7340/fi-bsw-nick/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3701/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_15254/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7341/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7341/fi-bdw-samus/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_15255/fi-bdw-5557u/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_15255/fi-bsw-nick/igt@gem_busy@busy-all.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_5318/fi-bdw-5557u/igt@gem_busy@busy-all.html
Comment 2 Lakshmi 2019-11-14 07:21:53 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5279/fi-bsw-cyan/igt@gem_busy@busy-all.html
Starting subtest: busy-all
(gem_busy:965) CRITICAL: Test assertion failure function basic, file ../tests/i915/gem_busy.c:447:
(gem_busy:965) CRITICAL: Failed assertion: busy
Subtest busy-all failed.
Comment 4 Chris Wilson 2019-11-14 07:55:23 UTC
That's the new cmdparser-proof spinner not being so happy on gen8. At least gen9 worked!
Comment 5 Chris Wilson 2019-11-14 08:00:24 UTC
Except...

ickle@braswell:~/intel-gpu-tools$ sudo ./build/tests/gem_busy --run busy-all
IGT-Version: 1.24-g828d2e6c (x86_64) (Linux: 5.4.0-rc6+ x86_64)
Starting subtest: busy-all
Subtest busy-all: SUCCESS (0.014s)
Comment 6 Chris Wilson 2019-11-14 10:44:15 UTC
commit d053b819673dda567faca00ccbd7e826f66da586 (upstream/master, origin/master, origin/HEAD)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Nov 14 10:24:51 2019 +0000

    lib: Set the COND_BB_END mask for bdw
    
    On Skylake+, the use of the mask for the compare address is predicated
    by an instruction flag. On Broadwell, it seems that some engines use the
    mask and some do not.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=112270
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Mika Kuoppala <mika.kuoppala@linux.intel.com>
    Acked-by: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Comment 7 CI Bug Log 2019-11-18 18:02:32 UTC
A CI Bug Log filter associated to this bug has been updated:

{- BSW BDW: igt@gem_busy@busy-all - fail - Failed assertion: gem_bo_busy(fd, spin-&gt;handle) -}
{+ BSW BDW: igt@gem_*@*|igt@perf_pmu@* - fail - Failed assertion: gem_bo_busy(fd, spin-&gt;handle) +}

New failures caught by the filter:

  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs0-nonpriv.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@semaphore-busy-vecs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@multi-client-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-hang-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@render-node-busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@semaphore-busy-rcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-idle-no-semaphores-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs1-nonpriv.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs0-dirty-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs1-dirty-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_exec_balancer@bonded-slice.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-idle-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-double-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-check-all-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs0-dirty-create.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-hang-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-idle-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs0-reset.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@multi-client-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs0-s3.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-no-semaphores-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-idle-check-all-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs1-s3.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs0-nonpriv-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-start-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_busy@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_wait@wait-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs1-nonpriv-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-idle-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs1-reset.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_busy@extended-semaphore-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-double-start-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@render-node-busy-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_exec_balancer@individual.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_busy@busy-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs1-clean.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_wait@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_engines@execute-one.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_ctx_isolation@vcs1-dirty-create.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@semaphore-busy-bcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-check-all-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@busy-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_wait@wait-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@gem_busy@extended-semaphore-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bdw-5557u/igt@perf_pmu@render-node-busy-idle-vcs1.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_ctx_isolation@vcs0-nonpriv.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@semaphore-busy-vecs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-hang-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@render-node-busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_ctx_isolation@vcs0-dirty-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@render-node-busy-idle-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-idle-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-double-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_ctx_isolation@vcs0-dirty-create.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-idle-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_ctx_isolation@vcs0-reset.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@multi-client-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_ctx_isolation@vcs0-s3.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_ctx_isolation@vcs0-nonpriv-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_busy@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_exec_balancer@individual.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_wait@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@semaphore-busy-bcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-check-all-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@perf_pmu@busy-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_wait@wait-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_ctx_isolation@vcs0-none.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_ctx_isolation@vcs0-nonpriv.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@semaphore-busy-vecs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-hang-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@render-node-busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@semaphore-busy-rcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_ctx_isolation@vcs0-dirty-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@render-node-busy-idle-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-idle-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-double-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_ctx_isolation@vcs0-dirty-create.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-idle-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_ctx_isolation@vcs0-reset.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@multi-client-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_ctx_isolation@vcs0-s3.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-idle-check-all-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_ctx_isolation@vcs0-nonpriv-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_busy@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_wait@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@semaphore-busy-bcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-check-all-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@perf_pmu@busy-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_wait@wait-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_ctx_isolation@vcs0-none.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_ctx_isolation@vcs0-nonpriv.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@semaphore-busy-vecs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-hang-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@render-node-busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@semaphore-busy-rcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_ctx_isolation@vcs0-dirty-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@render-node-busy-idle-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-idle-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-double-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_ctx_isolation@vcs0-dirty-create.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-idle-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_ctx_isolation@vcs0-reset.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@multi-client-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_ctx_isolation@vcs0-s3.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_ctx_isolation@vcs0-nonpriv-switch.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_busy@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_wait@busy-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-no-semaphores-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@semaphore-busy-bcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-check-all-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-start-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_wait@wait-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_ctx_isolation@vcs0-none.html
Comment 8 CI Bug Log 2019-11-19 14:56:55 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* BSW:  igt@gem_busy@extended-semaphore-vcs0 - fail - Failed assertion: still_busy(fd, handle[BUSY])
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-kefka/igt@gem_busy@extended-semaphore-vcs0.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-n3050/igt@gem_busy@extended-semaphore-vcs0.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@gem_busy@extended-semaphore-vcs0.html
Comment 9 CI Bug Log 2019-11-19 15:21:44 UTC
A CI Bug Log filter associated to this bug has been updated:

{- BSW BDW: igt@gem_*@*|igt@perf_pmu@* - fail - Failed assertion: gem_bo_busy(fd, spin-&gt;handle) -}
{+ BSW BDW: igt@gem_*@*|igt@perf_pmu@* - fail - Failed assertion: gem_bo_busy(fd, spin-&gt;handle) +}

New failures caught by the filter:

  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-accuracy-50-vcs0.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_404/fi-bsw-nick/igt@perf_pmu@busy-accuracy-98-vcs0.html


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.