lib: Set the COND_BB_END mask for bdw

On Skylake+, the use of the mask for the compare address is predicated
by an instruction flag. On Broadwell, it seems that some engines use the
mask and some do not.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=112270
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Cc: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Acked-by: Mika Kuoppala <mika.kuoppala@linux.intel.com>